--- a/my_task_manager/my_tasks/templates/my_tasks/base.html
+++ b/my_task_manager/my_tasks/templates/my_tasks/base.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/tasks-ajax.js' %}"></script>
+
     {% block content %}
     {% endblock %}
 </body>
